frontend completed, pending logo.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,22 @@
     />
     <meta name="apple-mobile-web-app-title" content="Gardenia" />
     <link rel="manifest" href="/site.webmanifest" />
+    <!-- images -->
+    <link rel="preload" as="image" href="/images/WFV_1000.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7658.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7677.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7729.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7754.webp" />
+    <!-- <link rel="preload" as="image" href="/images/WFV_7767.webp" /> -->
+    <link rel="preload" as="image" href="/images/WFV_7784.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7797-1.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7822.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7824.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7829.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7832.webp" />
+    <link rel="preload" as="image" href="/images/WFV_7833.webp" />
+    <link rel="preload" as="image" href="/images/WFV_9002.webp" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
